Archive2/65/74d70b22f4ec76/output
main.cpp:97:5: error: redefinition of 'main'
int main()
    ^
main.cpp:38:5: note: previous definition is here
int main()
    ^
1 error generated.
